--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,7 @@
 .map li.block-first-choose{
     /*background-color: red;*/
     border: 5px solid #ccc;
+    box-sizing:border-box;
 }
 .blocks
 {
